--- a/templats/adm/bloked_user.html
+++ b/templats/adm/bloked_user.html
@@ -71,7 +71,7 @@
 												<i class="dw dw-more"></i>
 											</a>
 												<div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
-													<a class="dropdown-item" onclick="unblock_user('{{user.id}}')" data-toggle="modal" data-target="#exampleModalCenter" ><i class="dw dw-block"></i> Unblock</a>
+													<a class="dropdown-item" onclick="unblock_user('{{user.id}}')" data-toggle="modal" data-target="#exampleModalCenter" ><i class="fa fa-user"></i> Unblock</a>
 												</div>		
 											</div>
 										</td>
