--- a/templats/adm/user_list.html
+++ b/templats/adm/user_list.html
@@ -72,7 +72,7 @@
 															<i class="dw dw-more"></i>
 														</a>
 															<div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
-																<a class="dropdown-item" onclick="block_user('{{user.id}}')" data-toggle="modal" data-target="#exampleModalCenter" ><i class="dw dw-block"></i> Block</a>
+																<a class="dropdown-item" onclick="block_user('{{user.id}}')" data-toggle="modal" data-target="#exampleModalCenter" ><i class="fa fa-ban"></i> Block</a>
 															</div>		
 														</div>
 													</td>
@@ -93,7 +93,7 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLongTitle">Delete</h5>
+                <h5 class="modal-title" id="exampleModalLongTitle">Block</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
