--- a/templats/userst/cart.html
+++ b/templats/userst/cart.html
@@ -17,7 +17,10 @@
 	<!-- Custom Theme files -->
 	<link href="{% static 'user/css/style.css' %}" rel='stylesheet' type='text/css' />
 	<!-- Custom Theme files -->
+	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 	<!--webfont-->
+
+	<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 	<!-- start menu -->
 
 	<script src="{% static 'user/js/jquery.easydropdown.js' %}"></script>
@@ -48,9 +51,8 @@
 					<div class="cart-header" style=" box-shadow: 0px 5px 10px; border-radius: 1rem 0px 0px 0px;">
 
 						<a style="display: flex; justify-content: end; border-radius: 1rem 0px 1rem 0px;"
-							href="{% url 'remove_cart_item' cart_item.prodect.id %}" type="button"
+							href="{% url 'remove_cart_item' cart_item.prodect.id %}" onclick="del_cart_item(event)" type="button"
 							class="btn btn-danger"><b>REMOVE</b></a></li>
-
 						<div class="cart-sec simpleCart_shelfItem">
 							<div class="row">
 								<div class="col-md-3">
@@ -66,8 +68,14 @@
 									<br>
 									<ul class="qty">
 										<li><label for="">Quantity:</label>
-											<a onclick="remove_cart('{{cart_item.prodect.id}}')" class="btn btn-light"
-												style="box-shadow: 0px 2px 3px;">-</a>
+											{% if cart_item.quantity == 1 %}
+												<a href="{% url 'remove_cart_item' cart_item.prodect.id %}" onclick="del_cart_item(event)"  class="btn btn-light"
+													style="box-shadow: 0px 2px 3px;">-</a>
+											{% else %}
+												<a onclick="remove_cart('{{cart_item.prodect.id}}')"  class="btn btn-light"
+													style="box-shadow: 0px 2px 3px;">-</a>
+											{% endif %}
+
 											<a class="btn btn-light"
 												style="box-shadow: 0px 2px 3px; width: 5%;">{{cart_item.quantity}}</a>
 											<a onclick="add_item('{{cart_item.prodect.id}}')" class="btn btn-light"
@@ -222,21 +230,11 @@
 
 	<!-- ##################### -->
 
-	<div id="id01" class="modal">
-		<span onclick="document.getElementById('id01').style.display='none'" class="close"
-			title="Close Modal">&times;</span>
-		<form class="modal-content" action="/action_page.php" style="width: 30%;">
-			<div class="container" style="width: 100%;">
-				<h1>Delete Account</h1>
-				<p>Are you sure you want to delete your account?</p>
 
-				<div class="clearfix">
-					<button style="width: 50%;" type="button" class="cancelbtn">Cancel</button>
-					<button type="button" style="width: 50%;" class="deletebtn">Delete</button>
-				</div>
-			</div>
-		</form>
-	</div>
+	<!-- Button trigger modal -->
+
+  
+
 	<!--footer-end-->
 	<script>
 
@@ -292,9 +290,34 @@
 			})
 		}
 	</script>
+	<script>
+		function del_cart_item(event){
+			event.preventDefault();
+			// var link=document.getElementById
+			console.log(event.target.href);
+			var link=event.target.href;
+			
+		// var confirmation =	confirm('are you sure ?')
+			swal({
+				title: "Are you sure?",
+				text: "Do you want to delete this item",
+				icon: "warning",
+				buttons: true,
+				dangerMode: true,
+				})
+				.then((willDelete) => {
+				if (willDelete) {
+					window.location = link;
+				} else {
+				}
+			});
+		}
+		
+	</script>
 
-	{% endblock %}
 
 </body>
+{% endblock %}
+
 
 </html>
