--- a/templats/userst/cart.html
+++ b/templats/userst/cart.html
@@ -300,7 +300,7 @@
 		// var confirmation =	confirm('are you sure ?')
 			swal({
 				title: "Are you sure?",
-				text: "Do you want to delete this item",
+				text: "Do you want to remove this item from the cart",
 				icon: "warning",
 				buttons: true,
 				dangerMode: true,
