--- a/templats/userst/base.html
+++ b/templats/userst/base.html
@@ -51,6 +51,9 @@
 	<!-- ### -->
 	<link href="{% static 'user/css/style.css' %}" rel="stylesheet" type="text/css" media="all" />
 
+	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
+
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<link rel="shortcut icon" href="#">
