--- a/templats/adm/cat_add.html
+++ b/templats/adm/cat_add.html
@@ -11,7 +11,7 @@
 				<div class="pd-20 card-box mb-30">
 					<div class="clearfix">
 						<div class="pull-left">
-							<h4 class="text-blue h4">Add Catagory</h4>
+							<h4 class="text-blue h4">Add Category</h4>
 						</div>
 					</div>
 					{% for message in messages %}
@@ -80,7 +80,7 @@
                 <button class="btn btn-outline-info" id="crop-btn"
                     style="width: 100%; margin-top: 10px; display: none; margin-bottom: 3%;" type="button">Crop</button>
                     <div class="text-center">
-					<img src="" id="image1"  alt="Image 1">
+						<img id="image1">
                     </div>
             </div>
             <div class="modal-footer">
