--- a/templats/adm/cat_edit.html
+++ b/templats/adm/cat_edit.html
@@ -11,7 +11,7 @@
         <div class="pd-20 card-box mb-30">
             <div class="clearfix">
                 <div class="pull-left">
-                    <h4 class="text-blue h4">Edit Catagory</h4>
+                    <h4 class="text-blue h4">Edit Category</h4>
                 </div>
             </div>
             {% for message in messages %}
