--- a/templats/adm/proAdd.html
+++ b/templats/adm/proAdd.html
@@ -131,10 +131,9 @@
 								<div class="container">
 									<div class="row" >
 										<div class="col-md-1"></div>
-										<img src="" id="image1" style="height: 30%; width: 30%;" alt="Image 1">
-										<img src="" id="image2" style="height: 30%; width: 30%;" alt="Image 2">
-										<img src="" id="image3" style="height: 30%; width: 30%;" alt="Image 3">
-
+										<img id="image1" style="height: 30%; width: 30%;">
+										<img id="image2" style="height: 30%; width: 30%;">
+										<img id="image3" style="height: 30%; width: 30%;">
 									</div>
 								</div>
 
