--- a/templats/adm/base.html
+++ b/templats/adm/base.html
@@ -160,16 +160,16 @@
 					</li>
 					<li class="dropdown">
 						<a href="javascript:;" class="dropdown-toggle">
-							<span class="micon dw dw-library"></span><span class="mtext">Prodect Management</span>
+							<span class="micon dw dw-library"></span><span class="mtext">Product Management</span>
 						</a>
 						<ul class="submenu">
-							<li><a href="{% url 'prolist' %}">Prodect List</a></li>
-							<li><a href="{% url 'proadd' %}">Add Prodect</a></li>
+							<li><a href="{% url 'prolist' %}">Product List</a></li>
+							<li><a href="{% url 'proadd' %}">Add Product</a></li>
 						</ul>
 					</li>
 					<li class="dropdown">
 						<a href="javascript:;" class="dropdown-toggle">
-							<span class="micon dw dw-library"></span><span class="mtext">Catagory Management</span>
+							<span class="micon dw dw-library"></span><span class="mtext">Category Management</span>
 						</a>
 						<ul class="submenu">
 							<li><a href="{% url 'cat_list' %}">List Category</a></li>
