--- a/templats/adm/proList.html
+++ b/templats/adm/proList.html
@@ -5,7 +5,7 @@
 			<div class="min-height-200px">
 				<div class="card-box mb-30">
 					<div class="pd-20">
-						<h4 class="text-blue h4">Prouct List</h4>
+						<h4 class="text-blue h4">Product List</h4>
 					</div>
 					<div class="pb-20">
 						<table class="table nowrap">
