--- a/templats/adm/cat_add.html
+++ b/templats/adm/cat_add.html
@@ -63,7 +63,7 @@
 					</div>
 				</div>
 				<!-- Input Validation End -->
-			</div>
+			</div>\
 		</div>
 		<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
     aria-hidden="true">
