--- a/templats/userst/profile.html
+++ b/templats/userst/profile.html
@@ -95,9 +95,9 @@
 							<!-- </form> -->
 							<!-- <a href="modal" data-toggle="modal" data-target="#modal" class="edit-avatar"><i class="fa fa-pencil"></i></a> -->
 							{% if user.profile_img %}
-							<img src="{{user.profile_img.url}}" class="border-radius-100 shadow" alt="">
-							{% else %}
 							<img src="{% static 'adm/vendors/images/user.png' %}">
+							{% else %}
+							<img src="{{user.profile_img.url}}" class="border-radius-100 shadow" alt="">
 							{% endif %}
 
 						</div>
@@ -233,7 +233,7 @@
 									<!-- Setting Tab start -->
 									<div class="tab-pane fade height-100-p" id="edit_user" role="tabpanel">
 										<div class="profile-setting">
-											<form action="{% url 'edit_profile' %}" method="POST">
+											<form action="{% url 'edit_profile' %}" id="submit-form" method="POST">
 												{% csrf_token %}
 												<ul class="profile-edit-list row">
 													<li class="weight-500 col-md-12">
@@ -241,33 +241,18 @@
 														</h4>
 														<div class="form-group">
 															<label>User Name</label>
-															<input name="username" value="{{ user.username }}"
+															<input name="username" id="username" value="{{ user.username }}"
 																class="form-control form-control-lg" type="text">
 														</div>
 														<div class="form-group">
 															<label>Email</label>
-															<input name="email" value="{{ user.email }}"
+															<input name="email" id="email" value="{{ user.email }}"
 																class="form-control form-control-lg" type="email">
 														</div>
 														<div class="form-group">
 															<label>Gender</label>
-															{% if user.gender == 'Male' %}
-															<div class="d-flex">
-																<div class="custom-control custom-radio mb-5 mr-20">
-																	<input type="radio" id="customRadio4" checked
-																		name="gender" value="Male"
-																		class="custom-control-input">
-																	<label class="custom-control-label weight-400"
-																		for="customRadio4">Male</label>
-																</div>
-																<div class="custom-control custom-radio mb-5">
-																	<input type="radio" id="customRadio5" name="gender"
-																		value="Female" class="custom-control-input">
-																	<label class="custom-control-label weight-400"
-																		for="customRadio5">Female</label>
-																</div>
-															</div>
-															{% elif user.gender == 'Female' %}
+															
+															{% if user.gender == 'Female' %}
 															<div class="d-flex">
 																<div class="custom-control custom-radio mb-5 mr-20">
 																	<input type="radio" id="customRadio4" name="gender"
@@ -286,7 +271,7 @@
 															{% else %}
 															<div class="d-flex">
 																<div class="custom-control custom-radio mb-5 mr-20">
-																	<input type="radio" id="customRadio4" name="gender"
+																	<input type="radio" id="customRadio4" name="gender" checked
 																		value="Male" class="custom-control-input">
 																	<label class="custom-control-label weight-400"
 																		for="customRadio4">Male</label>
@@ -303,14 +288,14 @@
 														</div>
 														<div class="form-group">
 															<label>Phone Number</label>
-															<input name="phone" value="{{ user.phone }}"
+															<input name="phone" id="phone" value="{{ user.phone }}"
 																class="form-control form-control-lg" type="number">
 														</div>
 														<div class="form-group">
 															<label>Country</label>
 															<select class="selectpicker form-control form-control-lg"
 																data-style="btn-outline-secondary btn-lg"
-																name="country">
+																name="country" id="country">
 																<option value="{{ user.country }}">{{ user.country }}
 																</option>
 																{% if user.country != 'US' %}
@@ -326,26 +311,29 @@
 														</div>
 														<div class="form-group">
 															<label>State</label>
-															<input name="state" value="{{ user.state }}"
+															<input name="state" id="state" value="{{ user.state }}"
 																class="form-control form-control-lg" type="text">
 														</div>
 														<div class="form-group">
 															<label>District</label>
-															<input name="district" value="{{ user.district }}"
+															<input name="district" id="district" value="{{ user.district }}"
 																class="form-control form-control-lg" type="text">
 														</div>
 														<div class="form-group">
 															<label>Address</label>
-															<textarea name="address" value="{{ user.address }}"
+															<textarea name="address" id="address" value="{{ user.address }}"
 																class="form-control">{{ user.address }}</textarea>
 														</div>
 														<div class="form-group">
 															<label>Image</label>
-															<input name="profile_img" 
-																class="form-control form-control-lg" type="file">
+															<input class="form-control" placeholder="image" name="profile_img" id="img1" class="form-control form-control-lg"
+																value="{{user.profile_img}}" accept="image/*" data-toggle="modal" data-target="#exampleModalCenter" type="file">
+														</div>
+														<div class="form-group">
+															<label class="btn btn-outline-info"data-toggle="modal" data-target="#exampleModalCenter">Preview</label>
 														</div>
 														<div class="form-group mb-0">
-															<input type="submit" class="btn btn-primary"
+															<input type="submit" class="btn btn-primary" 
 																value="Update Information">
 														</div>
 													</li>
@@ -370,82 +358,81 @@
 														</tr>
 													</thead>
 													<tbody>
-														{% for order_prodect in order_prodects %}
-														<tr>
-															<td class="table-plus">{{ forloop.counter }}</td>
-															<td>{{order_prodect.prodect.brand}}</td>
+															{% for order_prodect in order_prodects %}
+															<tr>
+																<td class="table-plus">{{ forloop.counter }}</td>
+																<td>{{order_prodect.prodect.brand}}</td>
 
-															<td>{{order_prodect.prodect.brand}}</td>
+																<td>{{order_prodect.prodect.brand}}</td>
 
-															<td>{{order_prodect.quantity}}</td>
-
-
-															{% if order_prodect.status == 'Placed' %}
-															<td style="color: rgb(0, 110, 255);">
-																{{order_prodect.status}}</td>
-															{% elif order_prodect.status == 'Shipping' %}
-															<td style="color: rgb(255, 196, 0);">
-																{{order_prodect.status}}</td>
-															{% elif order_prodect.status == 'Deliverd' %}
-															<td style="color: rgb(9, 255, 0);">{{order_prodect.status}}
-															</td>
-															{% elif order_prodect.status == 'Cancelled' %}
-															<td style="color: red;">{{order_prodect.status}}</td>
-															{% elif order_prodect.status == 'Return' %}
-															<td style="color: rgb(35, 35, 37);">{{order_prodect.status}}
-															</td>
-															{% endif %}
+																<td>{{order_prodect.quantity}}</td>
 
 
+																{% if order_prodect.status == 'Placed' %}
+																<td style="color: rgb(0, 110, 255);">
+																	{{order_prodect.status}}</td>
+																{% elif order_prodect.status == 'Shipping' %}
+																<td style="color: rgb(255, 196, 0);">
+																	{{order_prodect.status}}</td>
+																{% elif order_prodect.status == 'Deliverd' %}
+																<td style="color: rgb(9, 255, 0);">{{order_prodect.status}}
+																</td>
+																{% elif order_prodect.status == 'Cancelled' %}
+																<td style="color: red;">{{order_prodect.status}}</td>
+																{% elif order_prodect.status == 'Return' %}
+																<td style="color: rgb(35, 35, 37);">{{order_prodect.status}}
+																</td>
+																{% endif %}
 
 
 
-															<td>{{order_prodect.created_at}}</td>
 
-															<td class="table-plus">
-																<div class="name-avatar d-flex align-items-center">
-																	<div class="avatar mr-2 flex-shrink-0">
-																		<img src="{{ order_prodect.prodect.img1.url }}"
-																			class="border-radius-100 shadow"
-																			width="65px" height="65px" alt="">
+
+																<td>{{order_prodect.created_at}}</td>
+
+																<td class="table-plus">
+																	<div class="name-avatar d-flex align-items-center">
+																		<div class="avatar mr-2 flex-shrink-0">
+																			<img src="{{ order_prodect.prodect.img1.url }}"
+																				class="border-radius-100 shadow"
+																				width="65px" height="65px" alt="">
+																		</div>
 																	</div>
-																</div>
-															</td>
-															{% if order_prodect.status == "Deliverd" %}
-															<td>
-																<div class="dropdown">
-																	<a class="btn btn-link font-24 p-0 line-height-1 no-arrow dropdown-toggle"
-																		href="#" role="button" data-toggle="dropdown">
-																		<i class="dw dw-more"></i>
-																	</a>
-																	<div
-																		class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
-																		<a class="dropdown-item"
-																			href="{% url 'order_return' order_prodect.id %}" onclick="del_return(event)"><i
-																				class="dw dw-delete-3"></i> Return</a>
+																</td>
+																{% if order_prodect.status == "Deliverd" %}
+																<td>
+																	<div class="dropdown">
+																		<a class="btn btn-link font-24 p-0 line-height-1 no-arrow dropdown-toggle"
+																			href="#" role="button" data-toggle="dropdown">
+																			<i class="dw dw-more"></i>
+																		</a>
+																		<div
+																			class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
+																			<a class="dropdown-item"
+																				href="{% url 'order_return' order_prodect.id %}" onclick="del_return(event)"><i
+																					class="dw dw-delete-3"></i> Return</a>
+																		</div>
 																	</div>
-																</div>
-															</td>
-															{% elif order_prodect.status != "Cancelled" and order_prodect.status != "Return" %}
-															<td>
-																<div class="dropdown">
-																	<a class="btn btn-link font-24 p-0 line-height-1 no-arrow dropdown-toggle"
-																		href="#" role="button" data-toggle="dropdown">
-																		<i class="dw dw-more"></i>
-																	</a>
-																	<div
-																		class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
-																		<a class="dropdown-item"
-																			href="{% url 'order_cancel' order_prodect.id %}" onclick="del_cancel(event)"><i
-																				class="dw dw-edit2"></i> Cancel</a>
+																</td>
+																{% elif order_prodect.status != "Cancelled" and order_prodect.status != "Return" %}
+																<td>
+																	<div class="dropdown">
+																		<a class="btn btn-link font-24 p-0 line-height-1 no-arrow dropdown-toggle"
+																			href="#" role="button" data-toggle="dropdown">
+																			<i class="dw dw-more"></i>
+																		</a>
+																		<div
+																			class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
+																			<a class="dropdown-item"
+																				href="{% url 'order_cancel' order_prodect.id %}" onclick="del_cancel(event)"><i
+																					class="dw dw-edit2"></i> Cancel</a>
+																		</div>
 																	</div>
-																</div>
-															</td>
-															{% endif %}
+																</td>
+																{% endif %}
 
-														</tr>
-														{% endfor %}
-
+															</tr>
+															{% endfor %}
 													</tbody>
 												</table>
 											</div>
@@ -542,10 +529,37 @@
 				</div>
 			</div>
 		</div>
-		<div class="footer-wrap pd-20 mb-20 card-box">
+		<!-- <div class="footer-wrap pd-20 mb-20 card-box">
 			######################
+		</div> -->
+	</div>
+
+	<!-- modal -->
+	<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+    aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLongTitle">Crop</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<div id="image-box" class="image-container"></div>
+					<button class="btn btn-outline-info" id="crop-btn"
+						style="width: 100%; margin-top: 10px; display: none; margin-bottom: 3%;" type="button">Crop</button>
+						<div class="text-center">
+						<img src="" id="image1">
+						</div>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-outline-primary" style="width: 100%;" data-dismiss="modal">OK</button>
+				</div>
+			</div>
 		</div>
 	</div>
+	<!-- end_modal -->
 	<!-- js -->
 	<script src="{% static 'adm/vendors/scripts/core.js' %}"></script>
 	<script src="{% static 'adm/vendors/scripts/script.min.js' %}"></script>
@@ -553,33 +567,43 @@
 	<script src="{% static 'adm/vendors/scripts/layout-settings.js' %}"></script>
 	<script src="{% static 'adm/src/plugins/cropperjs/dist/cropper.js' %}"></script>
 	<script>
-		window.addEventListener('DOMContentLoaded', function () {
-			var image = document.getElementById('image');
-			var cropBoxData;
-			var canvasData;
-			var cropper;
-
-			$('#modal').on('shown.bs.modal', function () {
-				cropper = new Cropper(image, {
-					autoCropArea: 0.5,
-					dragMode: 'move',
-					aspectRatio: 3 / 3,
-					restore: false,
-					guides: false,
-					center: false,
-					highlight: false,
-					cropBoxMovable: false,
-					cropBoxResizable: false,
-					toggleDragModeOnDblclick: false,
-					ready: function () {
-						cropper.setCropBoxData(cropBoxData).setCanvasData(canvasData);
-					}
-				});
-			}).on('hidden.bs.modal', function () {
-				cropBoxData = cropper.getCropBoxData();
-				canvasData = cropper.getCanvasData();
-				cropper.destroy();
-			});
+		$(document).ready(function () {
+			jQuery.validator.addMethod("noSpace", function (value, element) {
+				return value == '' || value.trim(' ').length >= 4;
+			}, "At leest four charecters");
+			$("#submit-form").validate({
+				rules: {
+					username: {
+						required: true,
+						minlength: 3
+					},
+					email: {
+						required: true,
+						minlength: 3
+					},
+					phone: {
+						required: true,
+						minlength: 10,
+						maxlength: 10,
+					},
+					country: {
+						required: true,
+						minlength: 3
+					},
+					state: {
+						required: true,
+						minlength: 3
+					},
+					district: {
+						required: true,
+						minlength: 3
+					},
+					address: {
+						required: true,
+						minlength: 3
+					},
+				}
+			})
 		});
 	</script>
 	<script>
