--- a/templats/adm/index.html
+++ b/templats/adm/index.html
@@ -80,7 +80,8 @@
 							</select>
 						</div>
 					</div>
-					<div id="activities-chart"></div>
+					<canvas id="myChart1"></canvas>
+					<!-- <div id="activities-chart"></div> -->
 				</div>
 			</div>
 			<div class="col-md-4 mb-20">
@@ -294,6 +295,43 @@
 		},
 	});
 	</script>
+	<script>
+		var ctx = document.getElementById('myChart1').getContext('2d');
+		var myChart = new Chart(ctx, {
+		  type: 'line',
+		  data: {
+			labels: {{ labels1| safe}},
+		datasets: [{
+		  label: 'of order',
+		  data: {{ data1| safe}},
+		  backgroundColor: [
+		  'rgba(255, 99, 132, 0.2)',
+		  'rgba(54, 162, 235, 0.2)',
+		  'rgba(255, 206, 86, 0.2)',
+		  'rgba(75, 192, 192, 0.2)',
+		  'rgba(153, 102, 255, 0.2)',
+		  'rgba(255, 159, 64, 0.2)'
+		],
+		  borderColor: [
+		  'rgba(255, 99, 132, 1)',
+		  'rgba(54, 162, 235, 1)',
+		  'rgba(255, 206, 86, 1)',
+		  'rgba(75, 192, 192, 1)',
+		  'rgba(153, 102, 255, 1)',
+		  'rgba(255, 159, 64, 1)'
+		],
+		  borderWidth: 1
+					  }]
+				  },
+		options: {
+		  scales: {
+			y: {
+			  beginAtZero: true
+			}
+		  }
+		}
+			  });
+	  </script>
 </body>
 </html>
 {% endblock %}
