cancelled the week selector

--- a/templats/adm/index.html
+++ b/templats/adm/index.html
@@ -69,7 +69,7 @@
 		<div class="row pb-10">
 			<div class="col-md-8 mb-20">
 				<div class="card-box height-100-p pd-20">
-					<div class="d-flex flex-wrap justify-content-between align-items-center pb-0 pb-md-3">
+					<!-- <div class="d-flex flex-wrap justify-content-between align-items-center pb-0 pb-md-3">
 						<div class="h5 mb-md-0">Orders Static</div>
 						<div class="form-group mb-md-0">
 							<select class="form-control form-control-sm selectpicker">
@@ -79,7 +79,7 @@
 								<option value="">Last 1 year</option>
 							</select>
 						</div>
-					</div>
+					</div> -->
 					<canvas id="myChart1"></canvas>
 					<!-- <div id="activities-chart"></div> -->
 				</div>
