--- a/templats/userst/base.html
+++ b/templats/userst/base.html
@@ -43,9 +43,6 @@
 	<link href='//fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700' rel='stylesheet' type='text/css'>
 	<link href='//fonts.googleapis.com/css?family=Dorsa' rel='stylesheet' type='text/css'>
 	<script type="text/javascript" src="{% static 'user/js/jquery-1.11.1.min.js' %}"></script>
-	<!-- <link href="{% static 'user/css/megamenu.css' %}" rel="stylesheet" type="text/css" media="all" />
-	<script type="text/javascript" src="{% static 'user/js/megamenu.js' %}"></script>
-	<script>$(document).ready(function () { $(".megamenu").megamenu(); });</script> -->
 
 	<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 	<!-- ### -->
@@ -72,7 +69,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<script src="{% static 'user/js/simpleCart.min.js' %}"> </script>
 	<link href="{% static 'user/css/memenu.css' %}" rel="stylesheet" type="text/css" media="all" />
 	<script type="text/javascript" src="{% static 'user/js/memenu.js' %}"></script>
-	<script>$(document).ready(function () { $(".memenu").memenu(); });</script>
+	<!-- <script>$(document).ready(function () { $(".memenu").memenu(); });</script> -->
 	<!--dropdown-->
 	<script src="{% static 'user/js/jquery.easydropdown.js' %}"></script>
 
