--- a/templats/adm/admin_coupon_edit.html
+++ b/templats/adm/admin_coupon_edit.html
@@ -1,4 +1,5 @@
 {% extends 'adm/base.html' %}
+{% load static %}
 {% block content %}
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.11/cropper.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.11/cropper.js"></script>
@@ -8,14 +9,11 @@
     <div class="content-wrapper">
       <div class="page-header">
         <h3 class="page-title" style="color: silver;"> Edit Coupon </h3>
-
-
       </div>
-
       <div class="stretch-card" >
         <div class="card"style="border:0px; border-radius: 13px;">
           <div class="card-body">
-                {%if form.errors%}
+                {% if form.errors %}
                 <div class="alert alert-danger" role="alert">{{form.errors}}</div>
                 {% endif %}
 
@@ -45,6 +43,12 @@
     </div>
   </div>
 </div>
+<!-- js -->
+<script src="{% static 'adm/vendors/scripts/core.js' %}"></script>
+<script src="{% static 'adm/vendors/scripts/script.min.js' %}"></script>
+<script src="{% static 'adm/vendors/scripts/process.js' %}"></script>
+<script src="{% static 'adm/vendors/scripts/layout-settings.js' %}"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.js"></script>
 
 <script>
   for (i = 1; i <= 2; i++) {
