--- a/templats/adm/base.html
+++ b/templats/adm/base.html
@@ -169,10 +169,20 @@
 					</li>
 					<li class="dropdown">
 						<a href="javascript:;" class="dropdown-toggle">
+							<span class="micon dw dw-library"></span><span class="mtext">Brand Management</span>
+						</a>
+						<ul class="submenu">
+							<li><a href="{% url 'brand_list' %}">Brand List</a></li>
+							
+							<li><a href="{% url 'add_brand' %}">Add Brand</a></li>
+						</ul>
+					</li>
+					<li class="dropdown">
+						<a href="javascript:;" class="dropdown-toggle">
 							<span class="micon dw dw-library"></span><span class="mtext">Category Management</span>
 						</a>
 						<ul class="submenu">
-							<li><a href="{% url 'cat_list' %}">List Category</a></li>
+							<li><a href="{% url 'cat_list' %}">Category List</a></li>
 
 							<li><a href="{% url 'cat_add' %}">Add Category</a></li>
 						</ul>
