--- a/templats/adm/edit.html
+++ b/templats/adm/edit.html
@@ -96,7 +96,7 @@
 						<br>
 					</div>
 					<img src="{{ prodect.img1.url }}" width="20%" style="margin-right: 3%;" alt="">
-					<img src="" id="image1" style="width: 20%;" alt="New Image 1">
+					<img src="" id="image1" style="width: 20%;" >
 
 				</div>
 
@@ -107,7 +107,7 @@
 							accept="image/*" id="img2" type="file">
 					</div>
 					<img src="{{ prodect.img2.url }}" width="20%" style="margin-right: 3%;" alt="">
-					<img src="" id="image2" style="width: 20%;" alt="New Image 2">
+					<img src="" id="image2" style="width: 20%;" >
 
 				</div>
 				<div class="form-group row ">
@@ -117,7 +117,7 @@
 							accept="image/*" id="img3" type="file">
 					</div>
 					<img src="{{ prodect.img3.url }}" width="20%" style="margin-right: 3%;" alt="">
-					<img src="" id="image3" style="width: 20%;" alt="New Image 3">
+					<img src="" id="image3" style="width: 20%;" >
 
 				</div>
 
