--- a/templats/adm/index.html
+++ b/templats/adm/index.html
@@ -290,7 +290,6 @@
 					'rgba(192, 192, 192)',
 				],
 			
-				
 			}]
 		},
 	});
@@ -305,20 +304,20 @@
 		  label: 'of order',
 		  data: {{ data1| safe}},
 		  backgroundColor: [
-		  'rgba(255, 99, 132, 0.2)',
-		  'rgba(54, 162, 235, 0.2)',
-		  'rgba(255, 206, 86, 0.2)',
-		  'rgba(75, 192, 192, 0.2)',
-		  'rgba(153, 102, 255, 0.2)',
-		  'rgba(255, 159, 64, 0.2)'
+		  'rgba(255, 99, 132)',
+		  'rgba(54, 162, 235)',
+		  'rgba(255, 206, 86)',
+		  'rgba(75, 192, 192)',
+		  'rgba(153, 102, 255)',
+		  'rgba(255, 159, 64)'
 		],
 		  borderColor: [
-		  'rgba(255, 99, 132, 1)',
-		  'rgba(54, 162, 235, 1)',
-		  'rgba(255, 206, 86, 1)',
-		  'rgba(75, 192, 192, 1)',
-		  'rgba(153, 102, 255, 1)',
-		  'rgba(255, 159, 64, 1)'
+		  'rgba(255, 99, 132)',
+		  'rgba(54, 162, 235)',
+		  'rgba(255, 206, 86)',
+		  'rgba(75, 192, 192)',
+		  'rgba(153, 102, 255)',
+		  'rgba(255, 159, 64)'
 		],
 		  borderWidth: 1
 					  }]
