--- a/templats/adm/proAdd.html
+++ b/templats/adm/proAdd.html
@@ -31,8 +31,11 @@
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Brand</label>
 							<div class="col-sm-12 col-md-10" style="color: red;">
-								<input class="form-control" type="text" id="brand" name="brand"
-									placeholder="brand name">
+								<select class="custom-select col-12" id="brand" name="brand">
+									{% for brand in links1 %}
+									<option value="{{brand.id}}">{{brand.brand_name}}</option>
+									{% endfor %}
+								</select>
 							</div>
 						</div>
 						<div class="form-group row">
@@ -458,7 +461,6 @@
 			rules: {
 				brand: {
 					required: true,
-					minlength: 3
 				},
 				prodectname: {
 					required: true,
