--- a/templats/adm/report.html
+++ b/templats/adm/report.html
@@ -236,20 +236,20 @@
 
 <script>
 	$(function () {
-        var dtToday = new Date();
+        var dtToday = new Date()
 
-        var month = dtToday.getMonth() + 1;
+        var month = dtToday.getMonth() + 1
         var day = dtToday.getDate();
-        var year = dtToday.getFullYear();
+        var year = dtToday.getFullYear()
 
         if (month < 10)
-            month = '0' + month.toString();
+            month = '0' + month.toString()
         if (day < 10)
             day = '0' + day.toString();
 
-        var maxDate = year + '-' + month + '-' + day;
-        $('#todate').attr('max', maxDate);
-        $('#fromdate').attr('max', maxDate);
+        var maxDate = year + '-' + month + '-' + day
+        $('#todate').attr('max', maxDate)
+        $('#fromdate').attr('max', maxDate)
     });
 </script>
 </body>
