--- a/templats/userst/profile.html
+++ b/templats/userst/profile.html
@@ -94,11 +94,7 @@
 							<!-- End Modal -->
 							<!-- </form> -->
 							<!-- <a href="modal" data-toggle="modal" data-target="#modal" class="edit-avatar"><i class="fa fa-pencil"></i></a> -->
-							{% if user.profile_img %}
-							<img src="{% static 'adm/vendors/images/user.png' %}">
-							{% else %}
-							<img src="{{user.profile_img.url}}" class="border-radius-100 shadow" alt="">
-							{% endif %}
+							<img src="{{user.profile_img}}" class="border-radius-100 shadow" alt="">
 
 						</div>
 
@@ -327,7 +323,7 @@
 														<div class="form-group">
 															<label>Image</label>
 															<input class="form-control" placeholder="image" name="profile_img" id="img1" class="form-control form-control-lg"
-																value="{{user.profile_img}}" accept="image/*" data-toggle="modal" data-target="#exampleModalCenter" type="file">
+																accept="image/*" data-toggle="modal" data-target="#exampleModalCenter" type="file">
 														</div>
 														<div class="form-group">
 															<label class="btn btn-outline-info"data-toggle="modal" data-target="#exampleModalCenter">Preview</label>
@@ -444,7 +440,6 @@
 												<header class="card-header mb-2">
 													<strong class="d-inline-block mr-3">Add Address</strong>
 												</header>
-
 												<div class="col-md-12">
 													<form action="" method="post">
 														{% csrf_token %}
