--- a/templats/adm/index.html
+++ b/templats/adm/index.html
@@ -1,10 +1,6 @@
-
 {% extends 'adm/base.html' %}
 {% load static %}
 {% block content %}
-
-
-
 	<div class="xs-pd-20-10 pd-ltr-20">
 
 		<div class="title pb-20">
@@ -13,6 +9,7 @@
 
 		<div class="row pb-10">
 			<div class="col-xl-3 col-lg-3 col-md-6 mb-20">
+				<a href="{% url 'user_list' %}">
 				<div class="card-box height-100-p widget-style3">
 					<div class="d-flex flex-wrap">
 						<div class="widget-data">
@@ -24,8 +21,10 @@
 						</div>
 					</div>
 				</div>
+				</a>
 			</div>
 			<div class="col-xl-3 col-lg-3 col-md-6 mb-20">
+				<a href="{% url 'prolist' %}">
 				<div class="card-box height-100-p widget-style3">
 					<div class="d-flex flex-wrap">
 						<div class="widget-data">
@@ -37,8 +36,10 @@
 						</div>
 					</div>
 				</div>
+				</a>
 			</div>
 			<div class="col-xl-3 col-lg-3 col-md-6 mb-20">
+				<a href="{% url 'cat_list' %}">
 				<div class="card-box height-100-p widget-style3">
 					<div class="d-flex flex-wrap">
 						<div class="widget-data">
@@ -50,8 +51,10 @@
 						</div>
 					</div>
 				</div>
+			</a>
 			</div>
 			<div class="col-xl-3 col-lg-3 col-md-6 mb-20">
+				<a href="{% url 'report' %}">
 				<div class="card-box height-100-p widget-style3">
 					<div class="d-flex flex-wrap">
 						<div class="widget-data">
@@ -63,29 +66,19 @@
 						</div>
 					</div>
 				</div>
+				</a>
 			</div>
 		</div>
 
 		<div class="row pb-10">
 			<div class="col-md-8 mb-20">
 				<div class="card-box height-100-p pd-20">
-					<!-- <div class="d-flex flex-wrap justify-content-between align-items-center pb-0 pb-md-3">
-						<div class="h5 mb-md-0">Orders Static</div>
-						<div class="form-group mb-md-0">
-							<select class="form-control form-control-sm selectpicker">
-								<option value="">Last Week</option>
-								<option value="">Last Month</option>
-								<option value="">Last 6 Month</option>
-								<option value="">Last 1 year</option>
-							</select>
-						</div>
-					</div> -->
 					<canvas id="myChart1"></canvas>
-					<!-- <div id="activities-chart"></div> -->
 				</div>
 			</div>
 			<div class="col-md-4 mb-20">
 				<div class="card-box min-height-200px pd-20 mb-20" data-bgcolor="#455a64">
+					<a href="{% url 'order_history' %}">
 					<div class="d-flex justify-content-between pb-20 text-white">
 						<div class="icon h1 text-white">
 							<i class="fa fa-calendar" aria-hidden="true"></i>
@@ -100,8 +93,10 @@
 							<div id="appointment-chart"></div>
 						</div>
 					</div>
+				</a>
 				</div>
 				<div class="card-box min-height-200px pd-20" data-bgcolor="#265ed7">
+					<a href="{% url 'order_list' %}">
 					<div class="d-flex justify-content-between pb-20 text-white">
 						<div class="icon h1 text-white">
 							<i class="fa fa-calendar" aria-hidden="true"></i>
@@ -116,6 +111,7 @@
 							<div id="surgery-chart"></div>
 						</div>
 					</div>
+					</a>
 				</div>
 			</div>
 		</div>
