--- a/templats/userst/profile.html
+++ b/templats/userst/profile.html
@@ -138,6 +138,9 @@
 									<li class="nav-item">
 										<a class="nav-link" data-toggle="tab" href="#my_oredr" role="tab">My Order</a>
 									</li>
+									<li class="nav-item">
+										<a class="nav-link" data-toggle="tab" href="#address" role="tab">My Order</a>
+									</li>
 
 								</ul>
 								<div class="tab-content">
@@ -218,7 +221,7 @@
 											</article>
 											<div class="form-group mb-0">
 												<a class="nav-link btn btn-outline-primary" data-toggle="tab"
-													href="#address" role="tab">Add Address</a>
+													href="#address">Add Address</a>
 											</div>
 
 
