--- a/templats/adm/index.html
+++ b/templats/adm/index.html
@@ -297,7 +297,7 @@
 		  data: {
 			labels: {{ labels1| safe}},
 		datasets: [{
-		  label: 'of order',
+		  label: 'Orders',
 		  data: {{ data1| safe}},
 		  backgroundColor: [
 		  'rgba(255, 99, 132)',
