--- a/templats/userst/profile.html
+++ b/templats/userst/profile.html
@@ -138,9 +138,6 @@
 									<li class="nav-item">
 										<a class="nav-link" data-toggle="tab" href="#my_oredr" role="tab">My Order</a>
 									</li>
-									<li class="nav-item">
-										<a class="nav-link" data-toggle="tab" href="#address" role="tab">My Order</a>
-									</li>
 
 								</ul>
 								<div class="tab-content">
@@ -220,11 +217,8 @@
 												</div>
 											</article>
 											<div class="form-group mb-0">
-												<a class="nav-link btn btn-outline-primary" data-toggle="tab"
-													href="#address">Add Address</a>
+												<a class="nav-link btn btn-outline-info" data-toggle="tab" href="#adrs" role="tab">Add Address</a>
 											</div>
-
-
 										</div>
 									</div>
 									<!-- Timeline Tab End -->
@@ -437,7 +431,8 @@
 											</div>
 										</div>
 									</div>
-									<div class="tab-pane fade height-100-p" id="address" role="tabpanel">
+									
+									<div class="tab-pane fade height-100-p" id="adrs" role="tabpanel">
 										<div class="profile-setting">
 											<article class="card mt-3">
 												<header class="card-header mb-2">
