--- a/templats/adm/coupon_list.html
+++ b/templats/adm/coupon_list.html
@@ -16,7 +16,8 @@
 										<th>Discount</th>
 										<th>Status</th>
 										<th>Created at</th>
-										<th></th>
+										<th>Activate From</th>
+										<th>Deactivate At</th>
 								</tr>
 							</thead>
 							<tbody>
@@ -27,6 +28,8 @@
                                    <td>{{i.discount}}</td>
                                     <td>{{i.status}}</td>
                                     <td>{{i.date}}</td>
+									<td>{{i.valid_from}}</td>
+									<td>{{i.valid_to}}</td>
 									
 									<td>
 										<div class="dropdown">
