--- a/templats/adm/new_coupon.html
+++ b/templats/adm/new_coupon.html
@@ -27,12 +27,14 @@
                           {{form.code}} <br><br>
                           <label for="inputAddress" style="width: 100%;">{{form.discount.label}}</label>
                           {{form.discount}} <br><br>
-                          <label for="inputAddress">{{form.status.label}}</label>
-                          {{form.status}} <br><br>
+                          <label for="inputAddress" style="width: 100%;">{{form.valid_from.label}}</label>
+                          {{form.valid_from}} <br><br>
+                          <label for="inputAddress" style="width: 100%;">{{form.valid_to.label}}</label>
+                          {{form.valid_to}} <br><br>
 
 
                       <div class=" text-center" >
-                        <button type="submit" style="width: 100%;" class="btn btn-outline-info" id="confirm-btn"><a  >SUBMIT</a></button>
+                        <button type="submit" style="width: 100%;" class="btn btn-outline-info" id="confirm-btn"><a>SUBMIT</a></button>
                       </div>
 
                     </form>
